--- a/Intro_To_Colab.ipynb
+++ b/Intro_To_Colab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPhHbWm5FbBo/XJ8B/vdfy/",
+      "authorship_tag": "ABX9TyP7SE0Exhrwyca3uXmX+7sw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,17 +30,14 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "2 + 2"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "GIypWV2Ucpvm",
-        "outputId": "1ccd2be7-0695-4141-d532-cc4c128eadb1"
+        "id": "-206Mg0uhiVI",
+        "outputId": "caf7be01-42f5-4f37-cbce-d6c58bccc199"
       },
-      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -50,8 +47,11 @@
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 2
         }
+      ],
+      "source": [
+        "2 + 2"
       ]
     },
     {
@@ -60,54 +60,42 @@
         "import torch"
       ],
       "metadata": {
-        "id": "juj9Z-UwcxVm"
+        "id": "0Q0r7k0Shz0K"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "!pip list\n"
+        "7 + 8"
       ],
       "metadata": {
-        "id": "qo-zBqY0dDQl"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vyxexROkh3gt",
+        "outputId": "13154236-8931-4377-a62c-9dd1c4950539"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "15"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "RLqjKvc4dC6d"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "pr-Z_BsndCwl"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "xVeCMmmsdCkF"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "fPVCGZNPdCQd"
+        "id": "E5xIV60tiDOa"
       },
       "execution_count": null,
       "outputs": []
